Fixed text spacing from banner

--- a/style.css
+++ b/style.css
@@ -23,5 +23,4 @@ body {
     top: 0;
     left: 0;
     right: 0;
-    height: 100vh;
 }
